--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build": "rm -rf ./build && tsc --build",
     "build:run": "rm -rf ./build && tsc --build && node ./build/core/index.js",
     "pkg": "npm run build && rm -rf ./dist && pkg package.json",
-    "test": "jest --watch",
+    "test": "jest --watch ./test",
     "jison": "nodemon --watch './**/*.ts' --exec 'clear;ts-node' test_jison.ts"
   },
   "dependencies": {
+    "@types/jest": "^29.0.0",
     "chalk": "^4.1.2",
     "fast-xml-parser": "^3.20.0",
-    "jest": "^29.0.2",
+    "jest": "^28.0.8",
     "jison-gho": "^0.6.1-216",
     "xml2js": "^0.4.23"
   },
@@ -24,6 +25,7 @@
     "@types/xml2js": "^0.4.9",
     "nodemon": "^2.0.12",
     "pkg": "^5.3.1",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
   },
@@ -44,8 +46,5 @@
   "bugs": {
     "url": "https://github.com/pablomuro/goal-model-syntactic-analyzer/issues"
   },
-  "homepage": "https://github.com/pablomuro/goal-model-syntactic-analyzer#readme",
-  "jest": {
-    "modulePathIgnorePatterns": ["build", "core", "dist", "examples", "goal-model-examples", "test.ts"]
-  }
+  "homepage": "https://github.com/pablomuro/goal-model-syntactic-analyzer#readme"
 }
